remove badge offset to prevent cutoff overflow in sites directory

--- a/css/badges.css
+++ b/css/badges.css
@@ -8,11 +8,11 @@
   color: white;
   float: left;
   font-size: 0.75em;
-  left: -0.25em;
+  left: 0;
   line-height: 0.75em;
   padding: 0.25em;
   position: relative;
-  top: -0.25em;
+  top: 0;
   z-index: 10;
 }
 
